# snake-game

./: .gitignore  README.md  pyproject.toml
snake_game/: __init__.py
tests/: __init__.py  test_snake_game_version.py
